AppInfo & AppClipboard
- AppInfo: retrieve inbfo stored in jar file
- AppClipboard: app local clipboard & test cases