@@ -34,7 +34,7 @@ if (!hasProperty('mainClass')) {
 }
 mainClassName = 'tf.helper.test.TestDragResizer'
 group='tf.JavaHelper'
-version='1.2'
+version='1.3'
 
 repositories {
     mavenLocal()
@@ -95,6 +95,8 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.charts=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED',
     ]
     
 // extend Netbeans Gradle "Run" task
